--- a/src/css/ViewOrders.css
+++ b/src/css/ViewOrders.css
@@ -7,19 +7,24 @@
 .tabbutton.active {
   background-color: #e1b107 !important;
   color: white !important;
+  border: none !important;
 }
 
-.tabbutton:hover{
-    border: 1px solid #e1b107 !important;
-    color: black !important;
+.tabbutton:hover {
+  border: 1px solid #e1b107 !important;
+  color: black !important;
 }
 
-.nav-tabs{
-    border-bottom: 1px solid #e1b107 !important;
-    margin: 20px;
+.orderlabel {
+  font-weight: bolder;
 }
 
-.ordersadd{
+.nav-tabs {
+  border-bottom: 2px solid #e1b107 !important;
+  margin: 40px;
+}
+
+.ordersadd {
   margin: 30px 0 30px 30px;
   padding: 10px;
   border-radius: 30px;
@@ -28,7 +33,7 @@
   text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
-.orderslink{
+.orderslink {
   color: #E1B107;
   font-weight: 500;
   display: contents;
@@ -36,9 +41,8 @@
 }
 
 
-.orderscard{
-  height: 120px;
-  margin: 50px 0;
+.orderscard {
+  margin: 40px 0;
   padding: 10px 20px;
   background: #E1B107;
   border-radius: 0px 30px;
@@ -46,7 +50,7 @@
   align-items: center;
 }
 
-.orderscardbtn{
+.orderscardbtn {
   margin: 10px 5px;
   padding: 5px 20px;
   font-weight: 500;
@@ -57,74 +61,71 @@
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
-.ordersimg{
+.ordersimg {
   width: 70px;
   height: 100px;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   border-radius: 0 20px;
 }
 
-.ordersname{
+.ordersname {
   font-weight: 700;
   font-size: 28px;
   text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
-.ordersprice{
+.ordersprice {
   font-weight: 500;
   font-size: 20px;
 }
 
-@media (max-width: 468px)
-{
-    .ordersimg{
-        display: inline-flex;
-        width: 50px;
-        height: 80px;
-        box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-        border-radius: 0 20px;
-    }
-    .ordersname{
-        font-weight: 700;
-        font-size: 24px;
-        margin: 2px 0;
-        text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-    }
-    
-    .ordersprice{
-        margin: 2px 0;
-        font-weight: 500;
-        font-size: 18px;
-    }
+@media (max-width: 468px) {
+  .ordersimg {
+    display: inline-flex;
+    width: 50px;
+    height: 80px;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    border-radius: 0 20px;
+  }
 
-    .orderscardbtn{
-        margin: 5px;
-        padding: 2px 10px;
-        font-weight: 500;
-        border-radius: 20px;
-        border: 1px solid #E1B107;
-        width: 100px;
-        text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-        box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-    }
+  .ordersname {
+    font-weight: 700;
+    font-size: 24px;
+    margin: 2px 0;
+    text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  }
 
-    .orderscard{
-        height: 240px;
-        margin: 30px 20px;
-        justify-content: center;
-    }
+  .ordersprice {
+    margin: 2px 0;
+    font-weight: 500;
+    font-size: 18px;
+  }
 
-    .orderdetail{
-        text-align: center;
-    }
+  .orderscardbtn {
+    margin: 5px;
+    padding: 2px 10px;
+    font-weight: 500;
+    border-radius: 20px;
+    border: 1px solid #E1B107;
+    text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  }
 
-    body{
-        overflow-x: hidden !important;
-        overflow-y: visible !important;
-      }
+  .orderscard {
+    margin: 30px 20px;
+    justify-content: center;
+  }
 
-    .orderstitle{
-        margin-left: 20px;
-    }
+  .orderdetail {
+    text-align: center;
+  }
+
+  body {
+    overflow-x: hidden !important;
+    overflow-y: visible !important;
+  }
+
+  .orderstitle {
+    margin-left: 20px;
+  }
 }
-
