--- a/src/css/Products.css
+++ b/src/css/Products.css
@@ -1,9 +1,11 @@
 .productsadd{
-    margin: 30px 0 30px 30px;
-    padding: 10px;
+    /* margin: 30px 0 30px 30px; */
+    margin-top: 45px;
+    margin-left: 20px;
+    padding: 2px;
     border-radius: 30px;
     border: 3px solid #E1B107;
-    width: 200px;
+    width: 180px;
     color: #E1B107;
     /* text-shadow: 0px 2px 2px rgba(0, 0, 0, 0.25); */
 }
@@ -20,12 +22,14 @@
 }
 
 .productscard{
-    margin: 40px 0;
+    margin: 40px auto;
     padding: 10px 20px;
     background: #E1B107;
     border-radius: 0px 30px;
     filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
     align-items: center;
+    width: 78%;
+    
 }
 
 .productscardbtn{
@@ -37,6 +41,11 @@
     width: 120px;
     text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    width: 20%;
+}
+.addproductbtn{
+    /* font-size: 14px !important; */
+    width: 30% !important;
 }
 
 .productsimg{
@@ -54,6 +63,7 @@
 .productstitle{
     font-weight: bold;
     font-size: 24px;
+    text-align: center;
 }
 
 .productsprice{
