--- a/src/css/StoreDetail.css
+++ b/src/css/StoreDetail.css
@@ -7,6 +7,14 @@
     text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 
 }
+.row-background-image{
+   background-image: url(../images/books.jpg);
+   
+}
+.row-inside-div{
+   background-color: rgb(0,0,0,0.7);
+   
+}
 
  .inputtext{
     color: #E1B107;
@@ -15,10 +23,11 @@
  }
 
  .profileinput{
-    margin: 20px 0;
+    margin: 20px auto;
     box-shadow: 3px 7px 4px 2px rgba(0, 0, 0, 0.25);
     background-color: #E6E6E6;
     border: 1px solid #BB7B00;
+    width: 50%;
  }
 
  ::placeholder{
