--- a/src/css/ViewOrders.css
+++ b/src/css/ViewOrders.css
@@ -42,12 +42,13 @@
 
 
 .orderscard {
-  margin: 40px 0;
+  margin: 40px auto;
   padding: 10px 20px;
   background: #E1B107;
   border-radius: 0px 30px;
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
   align-items: center;
+  width: 80%;
 }
 
 .orderscardbtn {
